CatRadio

(+ New, * Updated, - Removed)

1.1.1 -
	* Sub VFO enhancement for non targetable_vfo rigs

1.1.0 - 2022-03-13
	+ AF Gain and Squelch slider
	+ Tab with CW and FM functions
	+ CW keyer speed
	+ FM repeater shift and CTCSS tone
	+ Red color VFO during transmit
	* SWR meter with log scale
	* CI-V Address entry in hex
	* Bug correction: RF Gain slider now correctly updated
	* Bug correction: noise filters init settings now correctly updated
	* Bug correction: subVFO mode
	* Bug correction: VFO dial now with pointer tracking 
	* Cosmetic adjustement to fit the font for different SO compiler


1.0.0 - 2022-02-13
	First release